--- a/pages/home/home.wxss
+++ b/pages/home/home.wxss
@@ -1,91 +1,8 @@
-.swipers{
-  padding-top: 30rpx;
-}
-.swiper{
-  margin-top: 130rpx;
-}
-.swiper image{
+.swiper-img image{
   width: 100%;
 }
-.search{
-  border-radius: 20rpx;
-  padding: 20rpx;
-  border: 1rpx solid #ccc;
-  font-size: 30rpx;
-}
-.t-grid-item image{
-  width: 100rpx;
-  height: 100rpx;
-}
-.command1{
-  margin: 30rpx 0;
-}
-.command1 .iconfont{
-  font-size: 50rpx;
-}
-.command1 .box{
-  text-align: center;
-}
-.command1 .name{
-  font-size: 30rpx;
-}
-.command-title{
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  margin-bottom: 15rpx;
-}
-.command-title>view:first-child{
-  font-weight: bold;
-  font-size: 45rpx;
-}
-.command-title>view:last-child{
-  font-size: 32rpx;
-  color: #999;
-}
-.command-content{
-  display: flex;
-  justify-content: space-between;
-}
-.command-content .title{
-  font-size: 28rpx;
-  color:#333;
-  overflow: hidden;            
-  text-overflow: ellipsis;      
-  white-space: nowrap; 
-}
-.command-content .price{
-  font-size: 30rpx;
-  color: #c82c2c;
-}
-.command-content image{
+
+t-grid-item image {
   width: 200rpx;
-  height: 170rpx;
-}
-.command2{
-  margin-bottom: 30rpx;
-}
-.command3 .command-title>view{
-  font-weight: bold;
-  font-size: 45rpx;
-  color: #000;
-}
-.command3 .item{
-  position: relative;
-}
-.command3 .item .desc{
-  width: 100%;
-  text-align: center;
-  position: absolute;
-  bottom: 70rpx;
-  left: 0;
-  z-index: 9;
-  color: #fff;
-  font-size: 31rpx;
-}
-.example .title{
-  text-align: center;
-  font-size: 40rpx;
-  font-weight: bold;
-  margin: 30rpx 0;
+  height: 200rpx;
 }
