修复留言功能

--- a/pages/usercenter/help/help.wxml
+++ b/pages/usercenter/help/help.wxml
@@ -1,15 +1,22 @@
+<!--
+ * @description: 
+ * @author: 董泽平
+-->
 <!--pages/usercenter/help/help.wxml-->
 <header title="帮助中心" statue="1"></header>
 <view>问题描述</view>
 <textarea placeholder='请填写...' 	bindblur='getInfo'></textarea>
 <view class="up">上传凭证</view>
-<t-upload
-  media-type="{{['image']}}"
-  bind:success="handleSucces"
-  files="{{originFiles}}"
-  gridConfig="{{gridConfig}}"
-  max = "3"
-/>
+
+
+<view class="img_box" >
+  <view class="img_box_cover" wx:for="{{uploadImgs}}">
+    <image wx:if="{{item}}" src="{{item}}"></image>
+    <view wx:else bindtap="upload">
+      +
+    </view>
+  </view>
+</view>
 <t-input bindblur='getName' label="联系人" placeholder="输入姓名" />
 
 <t-input bindblur='getTel' label="联系方式" placeholder="输入手机号" />
