--- a/pages/ke/ke.wxml
+++ b/pages/ke/ke.wxml
@@ -2,6 +2,10 @@
  * @description: 
  * @author: 董泽平
 -->
+<!--
+ * @description: 
+ * @author: 董泽平
+-->
 <header title="农课堂"></header>
 <div class="image_box">
   <image src="cloud://www-9gbp0av65043db23.7777-www-9gbp0av65043db23-1306553801/farm/6037feb8beabbc3850b5293c153adbe.png" >  </image>
@@ -9,11 +13,34 @@
 
 <t-swiper t-class="swiper-wrap" current="{{current}}" bindchange="onChange" navigation>
   <t-swiper-item wx:for="{{items}}" wx:key="index">
-    <view class="item"><text class="iconfont icon-tongzhi"></text>{{item.info}}</view>
+    <view class="swiper_item"><text class="iconfont icon-tongzhi"></text>{{item.info}}</view>
   </t-swiper-item>
 </t-swiper>
 
 <!--
   国家政策
-  案例扶持
+  致富故事
 -->
+<view class="hui">
+  <view class="title">惠农政策</view>
+  <view class="hui_box">
+    <view class="item">
+      <view>中华人民共和国古政令</view>
+      <view>
+        <view>山西省市政府</view><view>2021年5月22日</view>
+      </view>
+    </view>
+
+    <view class="item">
+      <view>中华人民共和国古政令</view>
+      <view>
+        <view>山西省市政府</view><view>2021年5月22日</view>
+      </view>
+    </view>
+  </view>
+</view>
+
+<view class="histrory">
+  <view class="title">致富故事</view>
+  <view></view>
+</view>
