完成农场后端配置

--- a/pages/ke/ke.wxml
+++ b/pages/ke/ke.wxml
@@ -2,6 +2,10 @@
  * @description: 
  * @author: 董泽平
 -->
+<!--
+ * @description: 
+ * @author: 董泽平
+-->
 <header title="农课堂"></header>
 <div class="image_box">
   <image src="cloud://www-9gbp0av65043db23.7777-www-9gbp0av65043db23-1306553801/farm/6037feb8beabbc3850b5293c153adbe.png" >  </image>
@@ -13,24 +17,13 @@
   </t-swiper-item>
 </t-swiper>
 
-<!--
-  国家政策
-  致富故事
--->
 <view class="hui">
   <view class="title">惠农政策</view>
-  <view class="hui_box">
+  <view class="hui_box" wx:for="{{policy}}" wx:index="index">
     <view class="item">
-      <view>中华人民共和国古政令</view>
+      <view>{{item.title}}</view>
       <view>
-        <view>山西省市政府</view><view>2021年5月22日</view>
-      </view>
-    </view>
-
-    <view class="item">
-      <view>中华人民共和国古政令</view>
-      <view>
-        <view>山西省市政府</view><view>2021年5月22日</view>
+        <view>{{item.author}}</view><view>{{item.time}}</view>
       </view>
     </view>
   </view>
@@ -38,24 +31,12 @@
 
 <view class="histrory">
   <view class="title">致富故事</view>
-  <view class="histrory_box">
-    <view class="item" >
-      <image src="./../../style/images/水果.png"></image>
+  <view class="histrory_box" wx:for="{{story}}" wx:key="{{index}}">
+    <view class="item">
+      <image src="{{item.img}}"></image>
       <view class="other" >
         <view class="title" >
-          疫情期间创奇迹
-        </view>
-        <view class="desc" >
-          大学生新农人靠电商在家乡做出一番事业
-        </view>
-      </view>
-    </view>
-
-    <view class="item" >
-      <image src="./../../style/images/水果.png"></image>
-      <view class="other" >
-        <view class="title" >
-          疫情期间创奇迹
+          {{item.title}}
         </view>
         <view class="desc" >
           大学生新农人靠电商在家乡做出一番事业
@@ -67,12 +48,11 @@
 
 <view class="example" >
   <view class="title">农业学堂</view>
-  <view class="example_box">
+  <view class="example_box" wx:for="{{school}}" wx:key="index">
     <view class="item">
-      <view class="title">如何种植玉米水稻</view>
-      <view class="imgs">
-        <image src="./../../style/images/水果.png"></image>
-        <image src="./../../style/images/水果.png"></image>
+      <view class="title">{{item.title}}</view>
+      <view class="imgs" wx:for="{{item.imgs}}" wx:key="index" wx:for-item="itemImg">
+        <image src="{{itemImg}}"></image>
       </view>
     </view>
   </view>
