--- a/pages/home/home.wxml
+++ b/pages/home/home.wxml
@@ -3,14 +3,14 @@
 <view class="container">
   <!-- 搜索 -->
   <view class="search" bindtap="goSearch">
-      <text class="txt">搜索,发现更多好物</text>
+      <text class="txt">搜索，发现更多好物</text>
   </view>
   <!-- 轮播图 -->
   <view class='banner-wrap'>
       <swiper class="banner" indicator-dots="true" autoplay="{{autoplay}}" interval="3000" duration="1000"   >
-          <swiper-item wx:for="{{banner}}" wx:key="id">
+          <swiper-item wx:for="{{swiper}}" wx:key="id">
               <navigator url="/pages/goods/goods?id={{item.gid}}">
-                  <image src="{{item.image}}" background-size="cover"></image>
+                  <image src="{{item.img}}" background-size="cover"></image>
               </navigator>
           </swiper-item>
       </swiper>
@@ -18,7 +18,7 @@
   <!-- 产品分类 -->
   <swiper class="catalog-wrap .new-box .navi-url" indicator-color="#dedede" indicator-active-color="#e00000">
       <swiper-item class="first">
-          <view wx:for="{{channel}}" wx:key="id" class='icon-navi' data-cateid="{{item.c_id}}" bindtap="goCategory">
+          <view wx:for="{{category}}" wx:key="id" class='icon-navi' data-cateid="{{item.c_id}}" bindtap="goCategory">
               <image class='icon-img' src="{{item.img}}"></image>
               <view class='icon-text'>{{item.name}}</view>
           </view>
@@ -27,14 +27,14 @@
   <!-- 热门推荐 -->
   <view class="title">热门推荐</view>
   <view class="goods-container">
-    <view wx:for="{{goods}}" wx:key="id">
+    <view wx:for="{{recommend_goods}}" wx:key="id">
       <navigator url="/pages/goods/goods">
         <view class="box">
-          <image src="{{item.imgUrl}}" class="image">
+          <image src="{{item.img}}" class="image">
           </image>
         </view>
         <view class="goods-info">
-            <view class="goods-title">{{item.name}}</view>
+            <view class="goods-title">{{item.title}}</view>
             <view class='price-container'>
                 <view class='l'>
                     <view class='h'>￥{{item.price}}</view>
