--- a/pages/ke/ke.wxml
+++ b/pages/ke/ke.wxml
@@ -2,25 +2,21 @@
  * @description: 
  * @author: 董泽平
 -->
-<!--
- * @description: 
- * @author: 董泽平
--->
 <header title="农课堂"></header>
 <div class="image_box">
   <image src="cloud://www-9gbp0av65043db23.7777-www-9gbp0av65043db23-1306553801/farm/6037feb8beabbc3850b5293c153adbe.png" >  </image>
 </div>
 
 <t-swiper t-class="swiper-wrap" current="{{current}}" bindchange="onChange" navigation>
-  <t-swiper-item wx:for="{{notices}}" wx:key="index">
+  <t-swiper-item wx:for="{{notices}}" wx:key="key">
     <view class="swiper_item"><text class="iconfont icon-tongzhi"></text>{{item.info}}</view>
   </t-swiper-item>
 </t-swiper>
 
 <view class="hui">
   <view class="title">惠农政策</view>
-  <view class="hui_box" wx:for="{{policy}}" wx:index="index">
-    <view class="item">
+  <view class="hui_box" wx:for="{{policy}}" wx:key="key">
+    <view class="item" bindtap="write" data-id="{{item._id}}">
       <view>{{item.title}}</view>
       <view>
         <view>{{item.author}}</view><view>{{item.time}}</view>
@@ -31,8 +27,8 @@
 
 <view class="histrory">
   <view class="title">致富故事</view>
-  <view class="histrory_box" wx:for="{{story}}" wx:key="{{index}}">
-    <view class="item">
+  <view class="histrory_box" wx:for="{{story}}" wx:key="key">
+    <view class="item" bindtap="write" data-id="{{item._id}}">
       <image src="{{item.img}}"></image>
       <view class="other" >
         <view class="title" >
@@ -46,10 +42,10 @@
   </view>
 </view>
 
-<view class="example" >
+<view class="example">
   <view class="title">农业学堂</view>
-  <view class="example_box" wx:for="{{school}}" wx:key="index">
-    <view class="item">
+  <view class="example_box" wx:for="{{school}}" wx:key="key">
+    <view class="item" bindtap="write" data-id="{{item._id}}">
       <view class="title">{{item.title}}</view>
       <view class="imgs" wx:for="{{item.imgs}}" wx:key="index" wx:for-item="itemImg">
         <image src="{{itemImg}}"></image>
