--- a/pages/ke/ke.wxml
+++ b/pages/ke/ke.wxml
@@ -2,6 +2,10 @@
  * @description: 
  * @author: 董泽平
 -->
+<!--
+ * @description: 
+ * @author: 董泽平
+-->
 <header title="农课堂"></header>
 <div class="image_box">
   <image src="cloud://www-9gbp0av65043db23.7777-www-9gbp0av65043db23-1306553801/farm/6037feb8beabbc3850b5293c153adbe.png" >  </image>
@@ -12,7 +16,10 @@
     <view class="swiper_item"><text class="iconfont icon-tongzhi"></text>{{item.info}}</view>
   </t-swiper-item>
 </t-swiper>
-
+<!--loading加载-->
+<view class="loading" hover-class="none" hover-stop-propagation="false">
+  <t-loading theme="spinner" size="40rpx" loading="{{loading}}"></t-loading>
+</view>
 <view class="hui">
   <view class="title">惠农政策</view>
   <view class="hui_box" wx:for="{{policy}}" wx:key="key">
@@ -33,9 +40,6 @@
       <view class="other" >
         <view class="title" >
           {{item.title}}
-        </view>
-        <view class="desc" >
-          大学生新农人靠电商在家乡做出一番事业
         </view>
       </view>
     </view>
