--- a/pages/search/search.wxss
+++ b/pages/search/search.wxss
@@ -15,15 +15,13 @@
   box-sizing: border-box;
   align-items: center;
 }
-
 .search-header .input-box {
   position: relative;
   margin-bottom: 10rpx;
-  float: left;
   width: 0;
   flex: 1;
-  height: 70rpx;
-  line-height: 70rpx;
+  height: 80rpx;
+  line-height: 80rpx;
   padding: 0 20rpx;
   background: #fafafa;
 }
@@ -50,6 +48,31 @@
 .search-result {
   margin-top: 50rpx;
 }
+
+/* section */
+.section {
+  margin-top: 10rpx;
+  min-width: 100%;
+  height: 80rpx;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;       /* 子元素垂直居中 */
+}
+
+.section .picker {
+  width: 250rpx;
+  line-height: 80rpx;
+  font-size: 30rpx;
+  display: flex;
+  justify-content: center;   /* 子元素水平居中 */
+  align-items: center;       /* 子元素垂直居中 */
+}
+
+.section .picker image{
+  width: 20rpx;
+  height: 20rpx;
+}
+/* section */
 
 /* goods-container */
 .goods-container{
@@ -122,4 +145,17 @@
   font-size: 28rpx;
   margin: 20rpx 0 30rpx 0;
   color: #999;
+}
+
+.myButton {
+	box-shadow:inset 0px 1px 0px 0px #ffffff;
+	background:linear-gradient(to bottom, #ffffff 5%, #f6f6f6 100%);
+	background-color:#ffffff;
+	border-radius:6px;
+	border:1px solid #dcdcdc;
+	display:inline-block;
+	cursor:pointer;
+	color:#666666;
+	font-weight:bold;
+	text-shadow:0px 1px 0px #ffffff;
 }
