--- a/pages/goods/goods.wxss
+++ b/pages/goods/goods.wxss
@@ -3,6 +3,7 @@
 }
 page{
   background: #f1ecec;
+  padding-bottom: 200rpx;
 }
 .bao{
   display: flex;
@@ -51,4 +52,11 @@ page{
 }
 .loading{
   text-align: center;
+}
+.detail{
+  width: 100%;
+
+}
+.detail image{
+  width: 100%;
 }
