--- a/pages/home/home.wxml
+++ b/pages/home/home.wxml
@@ -2,6 +2,10 @@
  * @description: 
  * @author: 董泽平
 -->
+<!--
+ * @description: 
+ * @author: 董泽平
+-->
 <header title="首页"></header>
 
 <view class="container">
@@ -27,7 +31,7 @@
   <!-- 产品分类 -->
   <swiper class="catalog-wrap .new-box .navi-url" indicator-color="#dedede" indicator-active-color="#e00000">
       <swiper-item class="first">
-          <view wx:for="{{sort}}" wx:key="index" class='icon-navi' data-cateid="{{item.c_id}}" bindtap="goCategory">
+          <view wx:for="{{sort}}" wx:key="index" class='icon-navi' data-id="{{item._id}}" bindtap="goCategory">
               <image class='icon-img' src="{{item.img}}"></image>
               <view class='icon-text'>{{item.name}}</view>
           </view>
@@ -37,7 +41,7 @@
   <view class="title">热门推荐</view>
   <view class="goods-container">
     <view wx:for="{{command}}" wx:key="index" class="item" data-id="{{item._id}}" bindtap="getGoods">
-      <image src="{{item.img}}" />
+      <image src="{{item.imgs[0]}}" />
       <view class="name">{{item.title}}</view>
       <view class="price">￥{{item.price}}</view>  
   </view>
