--- a/pages/submit/submit.wxml
+++ b/pages/submit/submit.wxml
@@ -2,16 +2,20 @@
  * @description: 
  * @author: 董泽平
 -->
+<!--
+ * @description: 
+ * @author: 董泽平
+-->
 <!--pages/submit/submit.wxml-->
 <header title="发布商品"></header>
 <view class="title">
   <view>商品标题</view>
-  <t-input placeholder="请输入文字" />
+  <t-input bindblur="getTitle" value="{{title}}" placeholder="请输入文字" />
 </view>
 
 <view class="desc">
   <view>商品详细描述</view>
-  <t-input  placeholder="货品描述请严格遵守相关规定" />
+  <t-input bindblur="getDesc" value="{{desc}}"  placeholder="货品描述请严格遵守相关规定" />
 </view>
 
 <view class="phone">
@@ -27,8 +31,9 @@
 />
  <view class="imgShow" wx:if="{{imgs.length}}">
    <image class="" src="{{item.url}}" wx:for="{{imgs}}" wx:key="index">
-     
+    <i class="iconfont icon-cuowuguanbiquxiao" data-index="{{index}}" bindtap="cacelImg"></i>
    </image>
+   
  </view>
 </view>
 
@@ -43,6 +48,8 @@
   gridConfig="{{gridConfig}}"
   max="1"
 />
+
+
  <view class="videoShow" wx:if="{{video}}">
    <video src="{{video}}" show-center-play-btn='{{false}}' 
    show-play-btn="{{true}}" 
@@ -51,17 +58,26 @@
  </view>
 </view>
 
+<!--loading加载-->
+<view class="loading" hover-class="none" hover-stop-propagation="false">
+  <t-loading theme="spinner" size="40rpx" loading="{{loading}}"></t-loading>
+</view>
+
 <view>
-  <t-input label="货品价格" placeholder="请输入文字" />
+  <t-input bindblur="getPrice" value="{{price}}" label="货品价格" placeholder="请输入文字" />
+</view>
+
+<view>
+  <t-input bindblur="getNum" value="{{num}}" label="货品库存量" placeholder="请输入文字" />
 </view>
 
 <view bindtap="choiceSort">
-  <t-input value="{{sValue}}" label="货品分类" placeholder="请选择分类" disabled="{{true}}" />
+  <t-input  value="{{sValue}}" label="货品分类" placeholder="请选择分类" disabled="{{true}}" />
 </view>
   
 
 <view class="add" >
-  <t-input bindblur='getAddress' value='{{addr.address}}' label="发货地址" placeholder="请选择发货地址" />
+  <t-input  bindblur='getAddress' value='{{address}}' label="发货地址" placeholder="请选择发货地址" />
   <text bindtap="map" class="iconfont icon-daohangdizhi"></text>
 </view>
 
@@ -73,4 +89,7 @@
   </t-action-sheet>
 </view>
 
-<t-button block="true" theme="primary" size="large">发布商品</t-button>
+<t-button bindtap="submit" block="true" theme="primary" size="large">发布商品</t-button>
+
+<t-dialog visible="{{window}}" title="发布成功" confirm-btn="确定" bind:confirm="confirmHandle"> </t-dialog>
+
