--- a/pages/home/home.wxml
+++ b/pages/home/home.wxml
@@ -27,7 +27,7 @@
   <!-- 产品分类 -->
   <swiper class="catalog-wrap .new-box .navi-url" indicator-color="#dedede" indicator-active-color="#e00000">
       <swiper-item class="first">
-          <view wx:for="{{sort}}" wx:key="index" class='icon-navi' data-cateid="{{item.cid}}" data-catetitle="{{item.name}}" bindtap="goCategory">
+          <view wx:for="{{sort}}" wx:key="index" class='icon-navi' data-cateid="{{item._id}}" data-catetitle="{{item.name}}" bindtap="goCategory">
               <image class='icon-img' src="{{item.img}}"></image>
               <view class='icon-text'>{{item.name}}</view>
           </view>
